fixed FAQ page so text doesn't leave the tabs when on smaller screen

--- a/public/css/pages/faq.css
+++ b/public/css/pages/faq.css
@@ -2,9 +2,13 @@ body {
     text-align: center;
 }
 
+.question_text {
+    padding: 10px;
+}
+
 .question {
     background-color: lightskyblue;
-    border: 5px;
+    border: 5%;
     border-color: black;
     border-bottom-left-radius: 50px;
     border-top-right-radius: 50px;
